# build-to-understand

./: CLAUDE.md  LICENSE  MANIFESTO.md  OPERATING_SYSTEM.md  README.md  ROADMAP.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
labs/mini-agent/: .gitignore  README.md  pyproject.toml
labs/mini-agent/examples/buggy_project/: calculator.py  test_calculator.py
labs/mini-agent/notes/: explain.md  failures.md  principles.md  references.md
labs/mini-agent/src/mini_claude_code/: __init__.py  agent.py  cli.py  messages.py  planner.py  safety.py  session.py  tools.py
labs/mini-agent/tests/: test_agent_demo.py  test_cli.py  test_safety.py  test_session.py  test_tools.py
labs/mini-object-store/: .gitignore  README.md  pyproject.toml
labs/mini-object-store/notes/: explain.md  failures.md  principles.md  references.md
labs/mini-object-store/src/mini_object_store/: __init__.py  demo.py  demo_lifecycle.py  demo_multipart.py  lifecycle.py  multipart.py  server.py  signing.py  store.py
labs/mini-object-store/tests/: test_lifecycle.py  test_multipart.py  test_presign.py
templates/lab-template/: README.md
templates/lab-template/notes/: explain.md  failures.md  principles.md  references.md
