[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mini-claude-code"
version = "0.1.0"
description = "A tiny, readable coding agent for learning how Claude Code-style agents work."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "zhufeng" }
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
mini-claude-code = "mini_claude_code.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
