[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mini-object-store"
version = "0.1.0"
description = "A tiny, readable object store for learning how presigned URLs (S3/R2) work."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "zhufeng" }
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
mini-object-store = "mini_object_store.demo:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
